--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <body>
 
+        <div>bla bla bla</div>
+
         <nav>
             <div class="nav-logo-wrap">
                 <a href="index.html"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
