Blog page changes

--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,15 @@
             </div>
         </nav>
 
+        <header class="block main-art-header">
+            <div class="main-art-header-wrap">
+                <div>
+                    <h1 class="text-heading-1">7 Team Collaboration Tools for Remote Teams</h1>
+                </div>
+                <div><a href="singlepost.html" class="button-big button-st-black">Read The Article</a></div>
+            </div>
+        </header>
+
         <section class="block articles">
             <div class="articles-filter">
                 <ul class="articles-filter-wrap">
@@ -46,9 +55,12 @@
                    <li class="button-big button-st-white">Lifestyle</li>
                    <li class="button-big button-st-white">Talk</li>
                 </ul>
+                <div class="articles-filter-button button-big button-st-white articles-pagination-button-icon">
+                    <img src="/icons/SlidersHorizontal.svg" alt="slider" class="articles-icon">
+                </div>
                 <div class="articles-filter-search button-big button-st-white">
                     <form action="#">
-                        <input type="search" name="search" id="search">
+                        <input type="search" name="search" id="search" placeholder="Search">
                         <input type="submit" value="#">
                     </form>
                 </div>
