Added mobile carusel

--- a/index.html
+++ b/index.html
@@ -135,59 +135,61 @@
             </div>
             <div class="clients-cards-arrows-wrap">
             <div class="clients-cards-arrows">
-                <img src="/icons/ArrowRight.svg" alt="arrow" class="icon-small left-arrow" id="arrow-inactive">
+                <img src="/icons/ArrowRight.svg" alt="arrow" class="icon-small left-arrow arrow-inactive">
                 <img src="/icons/ArrowRight.svg" alt="arrow" class="icon-small right-arrow">
             </div>
             <div class="clients-cards-wrap">
-                <div class="clients-card card-def">
-                    <img src="/images/Avatar Image (1).jpg" alt="client" class="image-avatar">
-                    <p>“The aesthetics of Cowork are inspiring. 
-                        The attention to detail in the design creates an atmosphere that sparks creativity. 
-                        It's a place where ideas flow effortlessly, and collaboration happens organically.”
-                    </p>
-                    <div class="clients-card-footer">
-                        <p class="text-subtitle">Michael Rodriguez</p>
-                        <p>Creative Director, DesignCraft Studio</p>
+                <div class="carusel__wrap">
+                    <div class="clients-card card-def">
+                        <img src="/images/Avatar Image (1).jpg" alt="client" class="image-avatar">
+                        <p>“The aesthetics of Cowork are inspiring. 
+                            The attention to detail in the design creates an atmosphere that sparks creativity. 
+                            It's a place where ideas flow effortlessly, and collaboration happens organically.”
+                        </p>
+                        <div class="clients-card-footer">
+                            <p class="text-subtitle">Michael Rodriguez</p>
+                            <p>Creative Director, DesignCraft Studio</p>
+                        </div>
                     </div>
-                </div>
-                <div class="clients-card card-def">
-                    <img src="/images/Avatar Image (3).jpg" alt="client" class="image-avatar">
-                    <p>"The 24/7 access and secure facilities have been incredibly convenient for my team's flexible schedules. 
-                        We love the coworking space!"
-                    </p>
-                    <div class="clients-card-footer">
-                        <p class="text-subtitle">Liam Brown</p>
-                        <p>Software Engineer, TechStartup Innovations</p>
+                    <div class="clients-card card-def">
+                        <img src="/images/Avatar Image (3).jpg" alt="client" class="image-avatar">
+                        <p>"The 24/7 access and secure facilities have been incredibly convenient for my team's flexible schedules. 
+                            We love the coworking space!"
+                        </p>
+                        <div class="clients-card-footer">
+                            <p class="text-subtitle">Liam Brown</p>
+                            <p>Software Engineer, TechStartup Innovations</p>
+                        </div>
                     </div>
-                </div>
-                <div class="clients-card card-def">
-                    <img src="/images/Avatar Image (2).jpg" alt="client" class="image-avatar">
-                    <p>"As a freelance designer, I was getting tired of working from home or coffee shops. 
-                        The coworking space has provided me with a productive and professional environment to focus on my work."
-                    </p>
-                    <div class="clients-card-footer">
-                        <p class="text-subtitle">Michael Thompson</p>
-                        <p>Graphic Designer, DesignCo</p>
+                    <div class="clients-card card-def">
+                        <img src="/images/Avatar Image (2).jpg" alt="client" class="image-avatar">
+                        <p>"As a freelance designer, I was getting tired of working from home or coffee shops. 
+                            The coworking space has provided me with a productive and professional environment to focus on my work."
+                        </p>
+                        <div class="clients-card-footer">
+                            <p class="text-subtitle">Michael Thompson</p>
+                            <p>Graphic Designer, DesignCo</p>
+                        </div>
                     </div>
-                </div>
-                <div class="clients-card card-def">
-                    <img src="/images/Avatar Image (6).jpg" alt="client" class="image-avatar">
-                    <p>"The coworking space has been a wonderful resource for my team. 
-                        The open floor plan and dedicated private offices allow us to collaborate and concentrate as needed."
-                    </p>
-                    <div class="clients-card-footer">
-                        <p class="text-subtitle">David Wilson</p>
-                        <p>Project Manager, SoftwareSolutions LLC</p>
+                    <div class="clients-card card-def">
+                        <img src="/images/Avatar Image (6).jpg" alt="client" class="image-avatar">
+                        <p>"The coworking space has been a wonderful resource for my team. 
+                            The open floor plan and dedicated private offices allow us to collaborate and concentrate as needed."
+                        </p>
+                        <div class="clients-card-footer">
+                            <p class="text-subtitle">David Wilson</p>
+                            <p>Project Manager, SoftwareSolutions LLC</p>
+                        </div>
                     </div>
-                </div>
-                <div class="clients-card card-def">
-                    <img src="/images/Avatar Image (4).jpg" alt="client" class="image-avatar">
-                    <p>"The flexible membership options and amenities like high-speed internet, 
-                        printers, and meeting rooms have made this coworking space a perfect fit for my small business."
-                    </p>
-                    <div class="clients-card-footer">
-                        <p class="text-subtitle">Alex Nguyen</p>
-                        <p>Marketing Consultant, Maverick Marketing</p>
+                    <div class="clients-card card-def">
+                        <img src="/images/Avatar Image (4).jpg" alt="client" class="image-avatar">
+                        <p>"The flexible membership options and amenities like high-speed internet, 
+                            printers, and meeting rooms have made this coworking space a perfect fit for my small business."
+                        </p>
+                        <div class="clients-card-footer">
+                            <p class="text-subtitle">Alex Nguyen</p>
+                            <p>Marketing Consultant, Maverick Marketing</p>
+                        </div>
                     </div>
                 </div>
             </div>
