Added clients animation

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="clients-cards-wrap">
                 <div class="carusel__wrap">
-                    <div class="clients-card card-def">
+                    <div class="clients-card card-def clients-card-not-viewed">
                         <img src="/images/Avatar Image (1).jpg" alt="client" class="image-avatar">
                         <p>“The aesthetics of Cowork are inspiring. 
                             The attention to detail in the design creates an atmosphere that sparks creativity. 
@@ -151,7 +151,7 @@
                             <p>Creative Director, DesignCraft Studio</p>
                         </div>
                     </div>
-                    <div class="clients-card card-def">
+                    <div class="clients-card card-def clients-card-not-viewed">
                         <img src="/images/Avatar Image (3).jpg" alt="client" class="image-avatar">
                         <p>"The 24/7 access and secure facilities have been incredibly convenient for my team's flexible schedules. 
                             We love the coworking space!"
@@ -161,7 +161,7 @@
                             <p>Software Engineer, TechStartup Innovations</p>
                         </div>
                     </div>
-                    <div class="clients-card card-def">
+                    <div class="clients-card card-def clients-card-not-viewed">
                         <img src="/images/Avatar Image (2).jpg" alt="client" class="image-avatar">
                         <p>"As a freelance designer, I was getting tired of working from home or coffee shops. 
                             The coworking space has provided me with a productive and professional environment to focus on my work."
@@ -171,7 +171,7 @@
                             <p>Graphic Designer, DesignCo</p>
                         </div>
                     </div>
-                    <div class="clients-card card-def">
+                    <div class="clients-card card-def clients-card-not-viewed">
                         <img src="/images/Avatar Image (6).jpg" alt="client" class="image-avatar">
                         <p>"The coworking space has been a wonderful resource for my team. 
                             The open floor plan and dedicated private offices allow us to collaborate and concentrate as needed."
@@ -181,7 +181,7 @@
                             <p>Project Manager, SoftwareSolutions LLC</p>
                         </div>
                     </div>
-                    <div class="clients-card card-def">
+                    <div class="clients-card card-def clients-card-not-viewed">
                         <img src="/images/Avatar Image (4).jpg" alt="client" class="image-avatar">
                         <p>"The flexible membership options and amenities like high-speed internet, 
                             printers, and meeting rooms have made this coworking space a perfect fit for my small business."
