Blog page filter

--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
              <ul class="nav-menu">
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="pricing.html" class="nav-link">Pricing</a></li>
-                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="blog.html" class="nav-link nav-link-active">Blog</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
              </ul>
              <div class="nav-buttons-wrap">
@@ -49,15 +49,12 @@
         <section class="block articles">
             <div class="articles-filter">
                 <ul class="articles-filter-wrap">
-                   <li class="button-big button-st-white filter-active">All Posts</li>
-                   <li class="button-big button-st-white">Trending</li>
-                   <li class="button-big button-st-white">Productivity</li>
-                   <li class="button-big button-st-white">Lifestyle</li>
-                   <li class="button-big button-st-white">Talk</li>
+                   <li class="button-big button-st-white button-filter filter-active">All Posts</li>
+                   <li class="button-big button-st-white button-filter">Trending</li>
+                   <li class="button-big button-st-white button-filter">Productivity</li>
+                   <li class="button-big button-st-white button-filter">Lifestyle</li>
+                   <li class="button-big button-st-white button-filter">Talk</li>
                 </ul>
-                <div class="articles-filter-button button-big button-st-white articles-pagination-button-icon">
-                    <img src="/icons/SlidersHorizontal.svg" alt="slider" class="articles-icon">
-                </div>
                 <div class="articles-filter-search button-big button-st-white">
                     <form action="#">
                         <input type="search" name="search" id="search" placeholder="Search">
@@ -205,7 +202,7 @@
                         <img src="/images/image$10.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
-                               <p class="tag-col tag-talk">Trending</p>
+                               <p class="tag-col tag-trend">Trending</p>
                                <p>4 min read</p>
                             </div>
                             <h3 class="text-heading-3">Coworking Space Design Trends for 2024</h3>
