--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
                 <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                <li><a href="pricing.html" class="nav-link nav-link-active">Pricing</a></li>
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
              </ul>
