--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo main-logo"></a>
+                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo main-logo"></a>
+                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
