--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
