--- a/blog.html
+++ b/blog.html
@@ -14,13 +14,13 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
+                <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                    <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
+                    <a href="#"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
@@ -79,7 +79,7 @@
                         </a>
                     </div>-->
                     <div class="article-card">
-                        <img src="/images/Image (4).jpg" alt="desk" class="image-second">
+                        <img src="images/Image (4).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -89,12 +89,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/Image (5).jpg" alt="desk" class="image-second">
+                        <img src="images/Image (5).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-talk">Talk</p>
@@ -104,12 +104,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$4.jpg" alt="desk" class="image-second">
+                        <img src="images/image$4.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -119,12 +119,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$5.jpg" alt="desk" class="image-second">
+                        <img src="images/image$5.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -134,12 +134,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$6.jpg" alt="desk" class="image-second">
+                        <img src="images/image$6.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-talk">Talk</p>
@@ -149,12 +149,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$7.jpg" alt="desk" class="image-second">
+                        <img src="images/image$7.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -164,12 +164,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$8.jpg" alt="desk" class="image-second">
+                        <img src="images/image$8.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-life">Lifestyle</p>
@@ -179,12 +179,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$9.jpg" alt="desk" class="image-second">
+                        <img src="images/image$9.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -194,12 +194,12 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
 
                     <div class="article-card">
-                        <img src="/images/image$10.jpg" alt="desk" class="image-second">
+                        <img src="images/image$10.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -209,7 +209,7 @@
                         </div>
                         <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
             </div>
@@ -227,7 +227,7 @@
 
         <section class="block claim">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="/images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
@@ -241,7 +241,7 @@
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="#" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
