--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
+                <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                    <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
+                    <a href="#"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
@@ -39,7 +39,7 @@
 
         <section class="block block-pages">
             <div class="block-pages-disc">
-                <h1 class="text-heading-1">About Our Coworking Space <span class="header-icon"><img src="/icons/star.svg" alt="logo" class="icon-mid"></span></h1>
+                <h1 class="text-heading-1">About Our Coworking Space <span class="header-icon"><img src="icons/star.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>We're on a mission to reshape how people work and create by providing elevated coworking experiences.</p>
             </div>
             <div class="about-cards-wrap">
@@ -88,7 +88,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">How flexible are Cowork's membership plans?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -99,7 +99,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">What kind of events and networking opportunities does Cowork provide?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -110,7 +110,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">Can I tour the Cowork space before committing to a membership?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -121,7 +121,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">Is Cowork suitable for remote teams and distributed workforces?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -132,7 +132,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">What measures does Cowork take for environmental sustainability?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -143,7 +143,7 @@
                 <div class="question-card">
                     <div class="question-card-title">
                         <h3 class="text-paragraph-strong">Still has questions?</h3>
-                        <div><img src="/icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
+                        <div><img src="icons/CaretCircleDown.svg" alt="arrow down" class="icon-small questions-arrow"></div>
                     </div>
                     <div class="question-card-disc">
                         <p>Frequently asked questions ordered by popularity. 
@@ -156,7 +156,7 @@
 
         <section class="block claim">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="/images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
@@ -170,7 +170,7 @@
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="#" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
