--- a/singlepost.html
+++ b/singlepost.html
@@ -14,13 +14,13 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
+                <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                    <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
+                    <a href="index.html"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
@@ -109,7 +109,7 @@
             <div class="articles-cards-button">
                 <div class="articles-cards-wrap">
                     <div class="article-card">
-                        <img src="/images/Image (3).jpg" alt="desk" class="image-second">
+                        <img src="images/Image (3).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -117,13 +117,13 @@
                             </div>
                             <h3 class="text-heading-3">Navigating the Future: Trends in Modern Coworking Spaces</h3>
                         </div>
-                        <a href="#" class="article-card-more">
+                        <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="/images/Image (4).jpg" alt="desk" class="image-second">
+                        <img src="images/Image (4).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -131,13 +131,13 @@
                             </div>
                             <h3 class="text-heading-3">Mastering Productivity: Tips from Cowork's High Achievers</h3>
                         </div>
-                        <a href="#" class="article-card-more">
+                        <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="/images/Image (5).jpg" alt="desk" class="image-second">
+                        <img src="images/Image (5).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-talk">Talk</p>
@@ -145,9 +145,9 @@
                             </div>
                             <h3 class="text-heading-3">Tech Talk: The Backbone of Cowork's Seamless Experience</h3>
                         </div>
-                        <a href="#" class="article-card-more">
+                        <a href="singlepost.html" class="article-card-more">
                             <p>Read more</p>
-                            <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
+                            <img src="icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>
                 </div>
@@ -158,14 +158,14 @@
 
         <section class="block claim">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="/images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
                 </p>
             </div>
             <div class="claim-button">
-                <a href="#" class="button-big button-st-black">Claim Your Spot</a>
+                <a href="contact.html" class="button-big button-st-black">Claim Your Spot</a>
             </div>
         </section>
 
@@ -174,11 +174,11 @@
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
-                        <div class="footer-form-button"><button type="submit" class="button-big button-style-white">Subscribe</button></div>
+                        <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
                 </div>
@@ -186,20 +186,20 @@
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Explore More</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Home</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">About</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Pricing</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Blog</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Contact</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="index.html">Home</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">About</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="pricing.html">Pricing</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="blog.html">Blog</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Stay Connected</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Subscribe</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Member Stories</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Locations</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Write for Us</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Subscribe</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">Member Stories</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Locations</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Write for Us</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
