--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="index.html"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
@@ -163,18 +163,18 @@
                 </p>
             </div>
             <div class="claim-button">
-                <a href="#" class="button-big button-st-black">Claim Your Spot</a>
+                <a href="contact.html" class="button-big button-st-black">Claim Your Spot</a>
             </div>
         </section>
 
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
-                        <div class="footer-form-button"><button type="submit" class="button-big button-style-white">Subscribe</button></div>
+                        <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
                 </div>
@@ -182,20 +182,20 @@
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Explore More</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Home</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">About</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Pricing</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Blog</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Contact</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="index.html">Home</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">About</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="pricing.html">Pricing</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="blog.html">Blog</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Stay Connected</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Subscribe</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Member Stories</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Locations</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Write for Us</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Subscribe</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">Member Stories</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Locations</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Write for Us</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
