--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
+                <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                    <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
+                    <a href="index.html"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
@@ -39,7 +39,7 @@
 
         <section class="block block-pages">
             <div class="block-pages-disc">
-                <h1 class="text-heading-1">Contact Us <span class="header-icon"><img src="/icons/chat-bubles.svg" alt="logo" class="icon-mid"></span></h1>
+                <h1 class="text-heading-1">Contact Us <span class="header-icon"><img src="icons/chat-bubles.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>Have questions about our coworking space and membership plans?  Drop us a line using the form below or give us a call.</p>
             </div>
             <div class="contact-content">
@@ -49,7 +49,7 @@
                         <input type="text" name="last-name" id="last-name" placeholder="Last Name *" class="contact-input" required>
                     </div>
                     <input type="email" name="email" id="email" placeholder="Email Address *" class="contact-input" required>
-                    <input type="number" name="phone" id="phone" placeholder="Phone *" class="contact-input" required>
+                    <input type="tel" name="phone" id="phone" placeholder="Phone *" class="contact-input" maxlength="8" required>
                     <div class="contact-select">
                         <select name="plan" id="plan" placeholder="Select a plan" class="contact-input" required>
                             <option value="" disabled selected hidden>Select a plan *</option>
@@ -92,11 +92,11 @@
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
-                        <div class="footer-form-button"><button type="submit" class="button-big button-style-white">Subscribe</button></div>
+                        <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
                 </div>
@@ -104,20 +104,20 @@
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Explore More</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Home</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">About</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Pricing</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Blog</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Contact</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="index.html">Home</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">About</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="pricing.html">Pricing</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="blog.html">Blog</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Stay Connected</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Subscribe</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Member Stories</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Locations</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Write for Us</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Subscribe</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">Member Stories</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Locations</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Write for Us</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
