--- a/pricing.html
+++ b/pricing.html
@@ -14,13 +14,13 @@
 
         <nav>
             <div class="nav-logo-wrap">
-                <a href="index.html" class="main-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                <div><img src="/icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
+                <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
             </div>
             <div class="nav-menu-wrap-mobile">
                 <div class="nav-logo-wrap mobile-menu">
-                    <a href="#"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
-                    <div><img src="/icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
+                    <a href="index.html"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <div><img src="icons/X.svg" alt="burger menu" class="button-small button-st-black nav-close"></div>
                 </div>
                 <div class="nav-menu-wrap">
              <ul class="nav-menu">
@@ -39,7 +39,7 @@
 
         <section class="pricing block block-pages">
             <div class="block-pages-disc">
-                <h1 class="text-heading-1">Membership Pricing <span class="header-icon"><img src="/icons/proce-tag.svg" alt="logo" class="icon-mid"></span></h1>
+                <h1 class="text-heading-1">Membership Pricing <span class="header-icon"><img src="icons/proce-tag.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>Invest in spaces that drives your business. Clear, straightforward and tailored to your needs.</p>
             </div>
             <div class="pricing-cards-wrap">
@@ -66,7 +66,7 @@
                             <p class="tag-def">Water</p>
                         </div>
                     </div>
-                    <a href="contact.html" class="button-big button-st-black">Subscribe Now</a>
+                    <a href="contact.html" class="button-big button-st-black pricing-button">Subscribe Now</a>
                 </div>
 
                 <div class="pricing-card">
@@ -92,7 +92,7 @@
                             <p class="tag-def">Weekly Cleaning</p>
                         </div>
                     </div>
-                    <a href="contact.html" class="button-big button-st-black">Subscribe Now</a>
+                    <a href="contact.html" class="button-big button-st-black pricing-button">Subscribe Now</a>
                 </div>
 
                 <div class="pricing-card">
@@ -118,14 +118,14 @@
                             <p class="tag-def">Monthly Parking Pass</p>
                         </div>
                     </div>
-                    <a href="contact.html" class="button-big button-st-black">Subscribe Now</a>
+                    <a href="contact.html" class="button-big button-st-black pricing-button">Subscribe Now</a>
                 </div>
             </div>
             <p class="pricing-card-footer">All plans require a 12-month agreement. <span></span>Prices are per person.</p>
         </section>
 
         <section class="services block">
-            <h2 class="text-heading-2">Add-ons <img src="/images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Services</h2>
+            <h2 class="text-heading-2">Add-ons <img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Services</h2>
             <div class="services-cards-wrap choose-cards-wrap">
                 <div class="services-card card-def">
                     <div class="services-card-title">
@@ -176,25 +176,25 @@
 
         <section class="block claim">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="/images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
                 </p>
             </div>
             <div class="claim-button">
-                <a href="#" class="button-big button-st-black">Claim Your Spot</a>
+                <a href="contact.html" class="button-big button-st-black">Claim Your Spot</a>
             </div>
         </section>
 
         <footer>
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
-                    <a href="#" class="footer-logo"><img src="/icons/Logo.svg" alt="Logo" class="icon-logo"></a>
+                    <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
                         <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
-                        <div class="footer-form-button"><button type="submit" class="button-big button-style-white">Subscribe</button></div>
+                        <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
                 </div>
@@ -202,20 +202,20 @@
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Explore More</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Home</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">About</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Pricing</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Blog</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Contact</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="index.html">Home</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">About</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="pricing.html">Pricing</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="blog.html">Blog</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
                         <h2 class="text-subtitle">Stay Connected</h2>
                         <ul>
-                            <li class="text-paragraph footer-main-link"><a href="#">Subscribe</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Member Stories</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Locations</a></li>
-                            <li class="text-paragraph footer-main-link"><a href="#">Write for Us</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Subscribe</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="about.html">Member Stories</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Locations</a></li>
+                            <li class="text-paragraph footer-main-link"><a href="contact.html">Write for Us</a></li>
                         </ul>
                     </div>
                     <div class="footer-main-links-wrap">
